Fixes Spacing between neutral-buttons
SRFCMSAL-2651

--- a/source/_patterns/20-molecules/show-info/show-info.scss
+++ b/source/_patterns/20-molecules/show-info/show-info.scss
@@ -190,7 +190,7 @@ $coverImageSize: 112px;
     position: relative;
     margin: 16px 16px 0 0;
 
-    &:last-of-type {
+    &:last-child {
       margin-right: 0;
     }
 
